quon_na/tests/snapshots/report_snapshots__empty_schedule_json.snap
---
source: quon_na/tests/report_snapshots.rs
expression: json
---
{
  "evidence_kind": "analytic",
  "evidence_disclaimer": "Compiler analytic metrics only — not fused with Python/Sinter sampled CSV; neither artifact is a threshold claim (ADR-0020).",
  "rydberg_stages": 0,
  "rearrangement_steps": 0,
  "rearrangement_time_us": 0,
  "trap_transfers": 0,
  "transfer_time_us": 0,
  "entangle2_count": 0,
  "entangle_n_count": 0,
  "measurement_rounds": 0,
  "reset_rounds": 0,
  "wait_time_us": 0,
  "total_time_us": 0,
  "logical_qubits": 0,
  "physical_atoms": 0,
  "estimated_cycles": 0,
  "bottleneck": "none"
}
