quon_na/tests/snapshots/report_snapshots__qec_repetition_d3_hybrid_json.snap
---
source: quon_na/tests/report_snapshots.rs
expression: json
---
{
  "evidence_kind": "analytic",
  "evidence_disclaimer": "Compiler analytic metrics only — not fused with Python/Sinter sampled CSV; neither artifact is a threshold claim (ADR-0020).",
  "rydberg_stages": 6,
  "rearrangement_steps": 13,
  "rearrangement_time_us": 2169,
  "trap_transfers": 44,
  "transfer_time_us": 660,
  "entangle2_count": 8,
  "entangle_n_count": 0,
  "measurement_rounds": 3,
  "reset_rounds": 2,
  "wait_time_us": 2,
  "total_time_us": 2572,
  "logical_qubits": 1,
  "physical_atoms": 5,
  "atoms_per_logical": 5,
  "code_family": "repetition_code_toy",
  "distance": 3,
  "memory_rounds": 2,
  "t_count": 0,
  "tdag_count": 0,
  "ccz_count": 0,
  "magic_state_demand": 0,
  "estimated_cycles": 52,
  "bottleneck": "rearrangement",
  "agnostic_placer_mechanism": "greedy_fallback",
  "error_budget": {
    "rydberg": 0.012,
    "measurement": 0.009,
    "reset": 0.008,
    "movement": 0.0065,
    "transfer": 0.0308,
    "idle": 4e-9
  },
  "temporal_atom_metrics": {
    "peak_atoms": 5,
    "allocated_atoms_series": [
      4,
      4,
      4,
      4,
      4,
      4,
      4,
      4,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5,
      5
    ],
    "measurement_count": 7,
    "reset_count": 4,
    "reuse_count": 0,
    "reused_ancilla_count": 0
  },
  "local_h_count": 0,
  "local_rz_count": 0,
  "local_u3_count": 0,
  "local_gate_time_us": 0,
  "global_ry_count": 0,
  "global_ry_time_us": 0,
  "gate_fidelity_product": 0.9193187712371369,
  "estimated_fidelity": 0.914292508666199
}
