quon_na/tests/snapshots/report_snapshots__qec_repetition_d3_md.snap
---
source: quon_na/tests/report_snapshots.rs
expression: md
---
# Neutral-atom resource report

## Qubit resources
| Metric | Value |
| --- | ---: |
| Logical qubits | 1 |
| Physical atoms | 5 |
| Atoms per logical | 5 |
| Code family | repetition_code_toy |
| Distance | 3 |

## Schedule metrics
| Metric | Value |
| --- | ---: |
| Estimated cycles | 0 |
| Bottleneck | none |
| Rydberg stages | 0 |
| Rearrangement steps | 0 |
| Rearrangement time (µs) | 0 |
| Trap transfers | 0 |
| Transfer time (µs) | 0 |
| Entangle2 count | 0 |
| EntangleN count | 0 |
| Measurement rounds | 0 |
| Reset rounds | 0 |
| Wait time (µs) | 0 |
| Total time (µs) | 0 |

## Notes
- Field names align with TUM RAP Table I / Enola headline metrics.
- `estimated_cycles` is `layers.len()`; `bottleneck` is the max of rydberg stages / rearrangement time / transfer time / measurement rounds (ties → mixed; all-zero → none).
- Non-QEC reports omit atoms-per-logical and code-family rows.
