quon_na/tests/snapshots/report_snapshots__qec_surface_d3_hybrid_json.snap
---
source: quon_na/tests/report_snapshots.rs
expression: json
---
{
  "evidence_kind": "analytic",
  "evidence_disclaimer": "Compiler analytic metrics only — not fused with Python/Sinter sampled CSV; neither artifact is a threshold claim (ADR-0020).",
  "rydberg_stages": 17,
  "rearrangement_steps": 60,
  "rearrangement_time_us": 8159,
  "trap_transfers": 236,
  "transfer_time_us": 3540,
  "entangle2_count": 48,
  "entangle_n_count": 0,
  "measurement_rounds": 3,
  "reset_rounds": 2,
  "wait_time_us": 2,
  "total_time_us": 9987,
  "logical_qubits": 1,
  "physical_atoms": 17,
  "atoms_per_logical": 17,
  "code_family": "surface_code_like",
  "distance": 3,
  "memory_rounds": 2,
  "t_count": 0,
  "tdag_count": 0,
  "ccz_count": 0,
  "magic_state_demand": 0,
  "estimated_cycles": 208,
  "bottleneck": "rearrangement",
  "agnostic_placer_mechanism": "mixed",
  "error_budget": {
    "rydberg": 0.034,
    "measurement": 0.009,
    "reset": 0.008,
    "movement": 0.03,
    "transfer": 0.1652,
    "idle": 4e-9
  },
  "temporal_atom_metrics": {
    "peak_atoms": 17,
    "allocated_atoms_series": [
      5,
      5,
      5,
      8,
      8,
      8,
      8,
      12,
      12,
      12,
      12,
      12,
      12,
      12,
      12,
      12,
      12,
      12,
      12,
      12,
      12,
      12,
      12,
      12,
      13,
      13,
      13,
      13,
      13,
      13,
      13,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17,
      17
    ],
    "measurement_count": 25,
    "reset_count": 16,
    "reuse_count": 0,
    "reused_ancilla_count": 0
  },
  "local_h_count": 16,
  "local_rz_count": 0,
  "local_u3_count": 0,
  "local_gate_time_us": 16,
  "global_ry_count": 0,
  "global_ry_time_us": 0,
  "gate_fidelity_product": 0.6178430572783696,
  "estimated_fidelity": 0.5597175024796199
}
