quon_na/tests/snapshots/report_snapshots__qec_surface_d3_hybrid_md.snap
---
source: quon_na/tests/report_snapshots.rs
assertion_line: 268
expression: md
---
# Neutral-atom analytic resource report

## Qubit resources
| Metric | Value |
| --- | ---: |
| Logical qubits | 1 |
| Physical atoms | 17 |
| Atoms per logical | 17 |
| Code family | surface_code_like |
| Distance | 3 |
| Memory rounds | 2 |

## Schedule metrics
| Metric | Value |
| --- | ---: |
| Estimated cycles | 195 |
| Bottleneck | rearrangement |
| Rydberg stages | 16 |
| Rearrangement steps | 56 |
| Rearrangement time (µs) | 8699 |
| Trap transfers | 226 |
| Transfer time (µs) | 3390 |
| Entangle2 count | 48 |
| EntangleN count | 0 |
| Measurement rounds | 3 |
| Reset rounds | 2 |
| Wait time (µs) | 2 |
| Total time (µs) | 10406 |
| Routing-agnostic placement mechanism | mixed |

## Atom pressure & reuse
| Metric | Value |
| --- | ---: |
| Peak atoms | 17 |
| Measurement count (ops) | 25 |
| Reset count (ops) | 16 |
| Reuse count (ops) | 0 |
| Reused ancilla count | 0 |

## Physical error budget
| Category | Contribution (rate × count) |
| --- | ---: |
| Rydberg | 0.032 |
| Measurement | 0.009 |
| Reset | 0.008 |
| Movement | 0.028 |
| Transfer | 0.1582 |
| Idle | 4e-9 |

## Fidelity estimate (Enola Eq. (1))
| Metric | Value |
| --- | ---: |
| Gate fidelity product | 0.624055605588 |
| Estimated fidelity (with idle decay) | 0.562572063694 |

## Notes
- Compiler analytic metrics only — not fused with Python/Sinter sampled CSV; neither artifact is a threshold claim (ADR-0020).
- Field names align with TUM RAP Table I / Enola headline metrics.
- `estimated_cycles` is `layers.len()`; `bottleneck` is the max of rydberg stages / rearrangement time / transfer time / measurement rounds (ties → mixed; all-zero → none).
- Non-QEC reports omit atoms-per-logical and code-family rows.
- `peak_atoms` counts distinct simultaneously-allocated atoms; qubit reuse (measure → reset → reuse of the same ancilla) lowers it versus a fresh-ancilla-per-round variant. `measurement_count` / `reset_count` are per-op tallies, distinct from the per-layer `measurement_rounds` / `reset_rounds`.
- Physical error budget lines are analytic schedule-count × rate contributions only — not sampled logical failure rates (Sinter) or threshold claims.
- Fidelity estimate is an analytic Enola Eq. (1) product over the compiled schedule (`fidelity.cz` for entangling actions, `fidelity.single_qubit` for local/global-ry actions including Hahn-echo bystander pulses, `fidelity.atom_transfer` for trap transfers, `fidelity.coherence_time_us` for idle decay) — not a logical error rate, not sampled (Sinter), and not a threshold claim; distinct from the analytic physical error budget (ADR-0017, `error_budget`, when present) — a `rate × schedule-count` sum, not a fidelity product.
